--- a/public/about.html
+++ b/public/about.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <h1>About</h1>
+    <img src="/img/weather.png" alt="">
   </body>
 </html>
